# AIDARS

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sample_scene.json  sitecustomize.py
docs/: blender_export_usage.md  mlops_roadmap.md  phase2_kickoff.md  scene_engine_architecture.md  scene_intelligence_architecture.md
output/: package.json  scene.json
scripts/: blender_export_scene.py  fix_tests.py  patch_exporter.py
src/aidars/: __init__.py
src/aidars/scene_intelligence/: README.md  __init__.py  adapters.py  blender_adapter.py  builders.py  cache.py  cli.py  dependency_graph.py  engine.py  exporters.py  integrity.py  loader.py  models.py  scanner.py  scene_engine.py
src/aidars/scene_intelligence/blender_scripts/: collection_extractor.py  inspect_scene.py  object_extractor.py  scene_metadata.py
src/aidars/scene_intelligence/blender_scripts/core/: config.py  enum.py  versions.py
src/aidars/scene_intelligence/blender_scripts/scene_analysis/: render_settings.py
src/aidars/scene_intelligence/blender_scripts/serializers/: payload_builder.py
src/aidars/scheduler/: __init__.py  frame_scheduler.py  queue.py
src/aidars/smart_package/: __init__.py  builder.py  optimizer.py
src/aidars/visibility/: __init__.py  engine.py
tests/: test_asset_optimizer.py  test_blender_scripts_extractors.py  test_cli.py  test_frame_scheduler.py  test_package_imports.py  test_scene_cache.py  test_scene_engine.py  test_scene_engine_facade.py  test_smart_package.py  test_visibility.py
tests/fixtures/: scene_payload.json
