[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aidars"
version = "0.1.0"
description = "AI-Driven Adaptive Render and Asset Distribution System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AIDARS Contributors" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
